--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,34 +1,34 @@
 {
-  "add-comment": "Neuen Kommentar hinzufügen",
-  "add-conversation": "Neue Unterhaltung aufmachen",
-  "by": "von",
-  "cannot-be-undone": "Das kann nicht rückgängig gemacht werden.",
-  "cancel": "Abbrechen",
-  "conversation": "Unterhaltung",
-  "conversations": "Unterhaltungen",
-  "comment": "Kommentar",
-  "comments": "Kommentare",
-  "delete": "Löschen",
-  "edit": "Bearbeiten",
-  "edit-conversation": "Unterhaltung bearbeiten",
-  "email": "E-Mail Adresse (Universität)",
-  "fill-all-fields": "Bitte füllen Sie alle Eingabefelder aus!",
-  "loading": "Lade ...",
-  "login": "Anmelden",
-  "logged-in-as": "Eingeloggt als",
-  "logout": "Abmelden",
-  "my-comments": "Meine Kommentare",
-  "my-content": "Meine Beiträge",
-  "my-conversations": "Meine Unterhaltungen",
-  "no-comments-yet": "Noch keine Kommentare verfasst.",
-  "no-conversations-yet": "Noch keine Unterhaltung angelegt.",
-  "o-clock": "Uhr",
-  "password": "Passwort",
-  "really-delete-comment": "Kommentar wirklich löschen?",
-  "reply": "Antworten",
-  "says": "sagt",
-  "submit": "Abschicken",
-  "title": "Titel",
-  "to-forum": "Zum Forum",
-  "your-text": "Ihr Text ..."
+  "add-comment": "Add comment",
+  "add-conversation": "Start conversation",
+  "by": "by",
+  "cannot-be-undone": "This cannot be undone.",
+  "cancel": "Cancel",
+  "conversation": "Conversation",
+  "conversations": "Conversations",
+  "comment": "Comment",
+  "comments": "Comments",
+  "delete": "Delete",
+  "edit": "Edit",
+  "edit-conversation": "Edit conversation",
+  "email": "Email address",
+  "fill-all-fields": "Plese fill out all input fields!",
+  "loading": "Loading ...",
+  "login": "Login",
+  "logged-in-as": "Logged in as",
+  "logout": "Logout",
+  "my-comments": "My comments",
+  "my-content": "My content",
+  "my-conversations": "My conversations",
+  "no-comments-yet": "No comments made yet.",
+  "no-conversations-yet": "No conversation started yet.",
+  "o-clock": "o'clock",
+  "password": "Password",
+  "really-delete-comment": "Really delete this comment?",
+  "reply": "Reply",
+  "says": "says",
+  "submit": "Submit",
+  "title": "Title",
+  "to-forum": "To the forum",
+  "your-text": "Your text ..."
 }
